--- a/Fitshing/main.css
+++ b/Fitshing/main.css
@@ -63,6 +63,47 @@
   border-radius: 10px;
 }
 
+/* .product123 {
+  padding: 2em;
+  display: flex;
+  gap: 1em;
+  overflow-x: auto;
+} */
+
+#header{
+  height:40vw;
+  font-size:4vw;
+  box-sizing:border-box;
+  text-align:center;
+  background-image: url("assets/bc.jpg");
+  background-size:cover;
+  background-position:center;
+  color:hsl(8, 62%, 5%);
+  display:flex;
+  background-attachment:fixed;
+  position:relative;
+}
+.header-inner{
+  background-image:
+    linear-gradient(to bottom,#0009,#0007);
+  width:100%;
+  height:100%;
+  justify-content:center;
+  align-items:center;
+  display:flex;
+  flex-flow:column wrap;
+  font-family: 'Mochiy Pop P One', sans-serif;
+  color:hsl(33, 73%, 72%);
+}
+.header-inner h1,.header-inner h2{
+  margin:0;
+}
+.header-inner h2{
+  font-size:2em;
+  color:hsl(33, 73%, 72%);
+}
+
 /* Maine */
+
 
 /* image scroll */
