--- a/Fitshing/src/assets/main.css
+++ b/Fitshing/src/assets/main.css
@@ -284,6 +284,11 @@
 }
 }
 
+.image.is-centered {
+  display: flex;
+  justify-content: center;
+}
+
 .num-in {
 	background: #FFFFFF;
 	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
