--- a/Fitshing/src/assets/main.css
+++ b/Fitshing/src/assets/main.css
@@ -52,7 +52,7 @@
 .productmain {
   padding: 2em;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 1em;
 }
 
@@ -64,6 +64,18 @@
 /* .product_items {
   cursor: grab;
 } */
+
+.locked-image {
+  .locked-image {
+    max-width: 200px;
+    max-height: 200px; 
+    width: auto; 
+    height: auto;
+    object-fit: cover; 
+    border-radius: 50%; 
+  }
+  
+}
 
 .product-img {
   width: 100%;
