--- a/Fitshing/src/assets/main.css
+++ b/Fitshing/src/assets/main.css
@@ -364,3 +364,7 @@
   transition: all 0.2s;
   transform: translate(0px, -7px);
 }
+.cardd:hover{
+  transition: all 0.2s;
+  transform: translate(0px, -7px);
+}
